[project]
name = "cbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cbsodata>=1.3.5",
    "dbt-core>=1.11.7",
    "dbt-snowflake>=1.11.4",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.4.0",
]
